# yoloparkingslot_detection

./: README.md  app.py  mark_slots.py  pyproject.toml  requirements.txt
parking_slots/: parking_slots_easy1.npy  parking_slots_easy2.npy  parking_slots_easy3.npy
smart-parking-docs/: mkdocs.yml
smart-parking-docs/docs/: installation.md  model.md  usage.md
